# Defkon-ADSB-SDR-Bridge

./: .gitattributes  .gitignore  PRIVACY_POLICY.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
bridge/: BUILDING.md  COPYRIGHT  GPL_DISTRIBUTION_CHECKLIST.md  NOTICE_ADSB_SDR.md  PRIVACY.md  PUBLIC_RELEASE_README.md  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  export-public-source.ps1
bridge/src/main/: AndroidManifest.xml
bridge/src/main/cpp/: CMakeLists.txt  defkon_rtlsdr_bridge.cpp  libusb_version_describe.h.in  native_modes_decoder.cpp  readsb_bridge_adapter.c  readsb_bridge_adapter.h
bridge/src/main/cpp/android_shims/: zstd.h
bridge/src/main/cpp/gpl/: README.md
bridge/src/main/cpp/gpl/readsb/: Dockerfile  Makefile  README-json.md  README.md  aircraft.c  aircraft.h  ais_charset.c  ais_charset.h  anet.c  api.c  api.h  argp.c  argp.h  changelog  comm_b.c  demod_2400.c  geomag.c  globe_index.c  globe_index.h  help.h  interactive.c  json_out.c  json_out.h  massif.sh  mode_s.c  net_io.c  net_io.h  nogrind.sh  readsb.c  readsb.h  receiver.c  sdr.c  sdr.h  sdr_beast.c  sdr_hackrf.c  sdr_ifile.c  sdr_plutosdr.c  sdr_plutosdr.h  sdr_rtlsdr.c  sdr_rtlsdr.h  (+11 more)
bridge/src/main/cpp/gpl/readsb/.github/workflows/: docker.yaml
bridge/src/main/cpp/gpl/readsb/compat/: compat.h
bridge/src/main/cpp/gpl/readsb/compat/apple/: clock_compat.h  cpu_compat.h  epoll_shim.c  epoll_shim.h  net_compat.h  sendfile_compat.h  serial_compat.h  stat_compat.h  thread_compat.h
bridge/src/main/cpp/gpl/readsb/debian/: changelog  control  copyright  readsb.default  readsb.service  rules
bridge/src/main/cpp/gpl/readsb/uat2esnt/: uat2esnt.c  uat_decode.c
bridge/src/main/cpp/gpl/rtl-sdr/include/: rtl-sdr.h
bridge/src/main/cpp/gpl/rtl-sdr/src/: librtlsdr.c
bridge/src/main/res/drawable/: ic_bridge_launcher.xml  ic_bridge_launcher_foreground.xml
bridge/src/main/res/mipmap-anydpi/: ic_bridge_launcher.xml  ic_bridge_launcher_round.xml
bridge/src/main/res/mipmap-anydpi-v26/: ic_bridge_launcher.xml
bridge/src/main/res/mipmap-anydpi-v33/: ic_bridge_launcher_round.xml
bridge/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
